--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,11 @@
         "symfony/ldap": "6.4.*",
         "symfony/mailer": "6.4.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/password-hasher": "6.4.*",
         "symfony/rate-limiter": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
+        "symfony/security-core": "6.4.*",
         "symfony/security-csrf": "6.4.*",
         "symfony/stimulus-bundle": "^2.17",
         "symfony/translation": "6.4.*",
