--- a/.env
+++ b/.env
@@ -39,10 +39,13 @@ LDAP_USER_TALDEA="" # adibidea => 'Rol-taldea1, Rol-taldea2'
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-meta ###
 
-
-MAILER_DSN=smtp://user:pass@smtp.example.com:port
-UID=0
-
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> ikerib/hautesmahaiak ###
+UID=0
+APP_LOGIN_LDAP=1 # Gaitu/Ezgaitu LDAP login.LDAP konexiorako datuak ere bete.
+APP_LOGIN_GILTZA=1 # Gaitu/Ezgaitu Giltza<->LDAP. LDAP konexiorako datuak ere bete eta oAuth datuak ere.
+APP_LOGIN_FORM=0 # Gaitu/Ezgaitu aplikazioaren login sitema. Aktibatzen bada, sortu erabiltzailea docker compose exec app bin/console app:add-user bidez
+###< ikerib/hautesmahaiak ###
