--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,6 +3,8 @@ twig:
   form_themes:
     - '@TalesFromADevFlowbite/form/default.html.twig'
   file_name_pattern: '*.twig'
+  globals:
+    env: '%env(resolve:APP_LOGIN_FORM)%'
 
 
 when@test:
