--- a/.env
+++ b/.env
@@ -49,3 +49,7 @@ APP_LOGIN_LDAP=1 # Gaitu/Ezgaitu LDAP login.LDAP konexiorako datuak ere bete.
 APP_LOGIN_GILTZA=1 # Gaitu/Ezgaitu Giltza<->LDAP. LDAP konexiorako datuak ere bete eta oAuth datuak ere.
 APP_LOGIN_FORM=0 # Gaitu/Ezgaitu aplikazioaren login sitema. Aktibatzen bada, sortu erabiltzailea docker compose exec app bin/console app:add-user bidez
 ###< ikerib/hautesmahaiak ###
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
