--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "pagerfanta/doctrine-orm-adapter": "*",
         "pagerfanta/twig": "*",
         "phpoffice/phpspreadsheet": "^2.0",
+        "sentry/sentry-symfony": "^5.0",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
         "symfony/console": "6.4.*",
@@ -27,7 +28,7 @@
         "symfony/framework-bundle": "6.4.*",
         "symfony/ldap": "6.4.*",
         "symfony/mailer": "6.4.*",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bundle": "*",
         "symfony/password-hasher": "6.4.*",
         "symfony/rate-limiter": "6.4.*",
         "symfony/runtime": "6.4.*",
