--- a/compose.yml
+++ b/compose.yml
@@ -39,3 +39,9 @@ services:
 
 volumes:
   hautesmahaiak-mysql-data:
+
+networks:
+  default:
+    ipam:
+      config:
+        - subnet: 172.177.0.0/16
