apache vhost # Agregar las directivas para manejar las cabeceras X-Forwarded-*     SetEnvIf X-Forwarded-Proto https HTTPS=on

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -40,6 +40,10 @@
         DirectoryIndex disabled
         FallbackResource disabled
     </Directory>
+
+    # Agregar las directivas para manejar las cabeceras X-Forwarded-*
+    SetEnvIf X-Forwarded-Proto https HTTPS=on
+
     ErrorLog /var/log/apache2/hautesmahaiak_error.log
     CustomLog /var/log/apache2/hautesmahaiak_access.log combined
 </VirtualHost>
